# discord-shell

./: meson.build  submodules.txt
files/: build-dpp.sh
src/: bot.cpp  bot.hpp  main.cpp  zlib.cpp  zlib.hpp
